# pc-monitor

./: .gitattributes  .gitignore  README.md  VM工程路径.txt  _fix_mainc.py  _fix_pcmon.py  _fix_statec.py  _fix_stateh.py  _fix_ui.py  _fix_ui2.py  _fix_version.py  _fix_version2.py  _test_debug.py  _test_final.py  _test_final2.py  _test_final3.py  _test_full.py  _test_ok.py  _test_raw.py  _test_reset.py  _test_send.py  _test_serial.py  _test_serial2.py  _test_serial3.py  _test_works.py  game_theme_mockup.html  sync_version.py  temp_io.txt
PCB设计/: gen_doc.py
enclosure/: gen_retro_case.py  retro_pc_case.scad  retro_pc_case.stl  retro_pc_case_v2.scad
pc_monitor/: CMakeLists.txt  DEV_PLAN.md
pc_monitor_2.8LCD/: CMakeLists.txt  sdkconfig  sdkconfig.bak  程序文件结构.txt
pc_monitor_ESP32-C3/: CMakeLists.txt  ESP32-C3开发参考网站.txt  IO分配表.txt  sdkconfig
pc_monitor_ESP32-C3/main/: CMakeLists.txt  app_config.h  app_discovery.c  app_pc_monitor.c  app_sensor.c  app_sensor.h  app_serial_cfg.c  app_state.c  app_state.h  app_time.c  app_ui.c  app_weather.c  app_weather.h  dht11.c  fix_ui.py  game_theme.c  game_theme.h  main.c
pc_monitor_ESP32-C3/main/game_theme/: project.info  ui.c  ui.h  ui_helpers.c  ui_helpers.h
pc_monitor_ESP32-C3/main/game_theme/screens/: ui_Screen1.c  ui_Screen1.h
pc_server/: CMakeLists.txt  README.md  _do_send_new.py  app_serial_cfg.h  app_wifi.c  build_exe.py  build_vm.py  configure_lvgl.py  firewall_setup.bat  gen_doc.py  launch.vbs  pc_server.py  pc_server_console.py  pc_server_tray.py  requirements.txt  serial_mon.py  serial_read.py  serial_read2.py  (+5 more)
(+102 files in other folders)
